# LClass

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2f30446  CMakeLists.txt.user.8527734  CMakeLists.txt.user.eede0db  CMakePresets.json  CMakeUserPresets.json  LClass.pyproj  LClass.sln  LClass.sln1  README.md
Demo/: CMakeLists.txt  Demo.cpp  Demo.h  Demo.qrc  Demo.vcxproj  Demo.vcxproj.filters  Demo.vcxproj.user1  Demo.vcxproj1  main.cpp
Demo/resource/: Demo_rc.py
Demo/src/: Demo.cpp
Demo/ui/: Demo.ui
LCore/: CMakeLists.txt  LCore.vcxproj  LCore.vcxproj.filters  LCore.vcxproj.filters1  LCore.vcxproj1
LCore/include/: LConfig.h  LCore  LDateTime.h  LInIConfig.h  LInstanceMap.h  LJsonConfig.h  LLog.h  LSingleApplication.h  LSqlExecutor.h  LXmlConfig.h  func.h  lcore_global.h  lnamespace.h
LCore/src/: LConfig.cpp  LCore.cpp  LDateTime.cpp  LInIConfig.cpp  LInstanceMap.cpp  LJsonConfig.cpp  LSingleApplication.cpp  LXmlConfig.cpp  func.cpp
LWidget/: CMakeLists.txt  LWidget.vcxproj  LWidget.vcxproj.filters  LWidget.vcxproj1  Resource.qrc
LWidget/include/: LButton.h  LComboBox.h  LGraphicsEffect.h  LInstrumentBoard.h  LJZWidget.h  LNavigationBar.h  LProgressBar.h  LTextEdit.h  LWidget  LWidget.h  llineedit.h  lwidget_global.h
LWidget/resource/: Resource.qrc
LWidget/src/: LButton.cpp  LComboBox.cpp  LGraphicsEffect.cpp  LInstrumentBoard.cpp  LJZWidget.cpp  LLineedit.cpp  LNavigationBar.cpp  LProgressBar.cpp  LTextEdit.cpp  LWidget.cpp
Python/Demo/: demo.py  main.py
Python/LCore/: LFunc.py  __init__.py
Python/LWidget/: LButton.py  LComboBox.py  LJZWidget.py  LLineEdit.py  LTextEdit.py  __init__.py
Python/LWidget/resource/: Resource.qrc  Resource_rc.py
cmdDemo/: CMakeLists.txt  main.cpp
cmdDemo/include/: test.h
