cmake_minimum_required(VERSION 3.16)

project("LClass")
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Debug)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Debug)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Debug)
    link_directories(${CMAKE_BINARY_DIR}/../Debug)
else()
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Release)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Release)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../Release)
    link_directories(${CMAKE_BINARY_DIR}/../Release)
endif()
add_subdirectory(LCore)
add_subdirectory(LWidget)
add_subdirectory(Demo)