cmake_minimum_required(VERSION 3.16)

project("LClass")
set(CMAKE_CXX_STANDARD 17)
if (WIN32)
    set(Qt_Kit_Path "D:/qt/6.7.2/msvc2019_64")
else ()
    set(Qt_Kit_Path "/home/ljz/Qt/6.7.0/gcc_64")
endif ()

set(CMAKE_PREFIX_PATH ${Qt_Kit_Path}/lib/cmake)

find_package(Qt6 REQUIRED)
set(QT_VERSION_MAJOR ${Qt6_VERSION_MAJOR})
set(QT_VERSION_MINOR ${Qt6_VERSION_MINOR})
set(QT_VERSION_PATCH ${Qt6_VERSION_PATCH})

set(QT_VERSION ${QT_VERSION_MAJOR}.${QT_VERSION_MINOR}.${QT_VERSION_PATCH})

if(WIN32)
    set(PLATFORM "Win32")
    set(BUILD_TYPE "")
else()
    set(PLATFORM "Linux")
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        set(BUILD_TYPE "/Debug")
    else()
        set(BUILD_TYPE "/Release")
    endif()
endif()

set(OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output/${CMAKE_CXX_COMPILER_ID}/${PLATFORM}-${QT_VERSION}${BUILD_TYPE})
message(STATUS "OUTPUT_PATH: ${OUTPUT_PATH}")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_PATH})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_PATH})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_PATH})
link_directories(${OUTPUT_PATH})
add_subdirectory(LCore)
add_subdirectory(LWidget)
add_subdirectory(Demo)
